# efektywniejsi-ekosystem-api

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  PACKAGE_COMMERCE_IMPLEMENTATION.md  README.md  docker-compose.e2e.yml  docker-compose.yml  fly.toml  fly.worker.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 083bb7bd54ca_add_settings_fields_to_users.py  114eb9d6582c_add_video_url_to_packages.py  159d7f2a08bd_add_course_system_tables.py  3b5d647aeaf0_make_mux_playback_id_nullable.py  49f335edbf16_add_lesson_status.py  630ba6f0f48a_remove_is_preview_from_lessons.py  73bb4407ac83_add_last_active_at_to_users.py  7ddb451f0360_add_support_ticket_system.py  89c12a2bcba9_initial_migration_with_users_table.py  94667ffa8c1f_add_announcement_logs_table.py  9761bc484020_add_package_commerce_system.py  a1b2c3d4e5f7_add_user_daily_activity_table.py  add_access_duration_to_bundle_course_items.py  add_ai_chat_sessions_table.py  add_brand_guidelines_table.py  add_bundle_course_items.py  add_content_type_to_courses.py  add_expires_at_to_enrollments.py  add_integrations_tables.py  add_invoice_fields_to_orders.py  add_learning_fields_to_courses.py  add_sales_page_sections_to_courses.py  add_sales_page_sections_to_packages.py  b3a1c7e9d402_add_announcement_log_id_to_notifications.py  c2d3e4f5g6h7_migrate_support_to_community.py  c76bee7811ba_add_sales_windows_table.py  d3e4f5g6h7i8_add_course_context_to_threads.py  e4f5g6h7i8j9_consolidate_thread_categories.py  eba6ad16dd6e_add_messaging_tables.py  f2526c1bf680_add_index_points_history_created_at.py  f5g6h7i8j9k0_add_thread_tags_and_attachments.py  f62d2e86c643_add_notifications_table.py  g6h7i8j9k0l1_drop_last_active_at_from_users.py  h7i8j9k0l1m2_add_image_url_to_integrations.py  i8j9k0l1m2n3_add_process_integrations.py  j9k0l1m2n3o4_drop_archive_columns.py
app/: main.py
app/admin/: __init__.py
app/admin/routes/: admin_statistics.py
app/admin/schemas/: __init__.py  admin_statistics.py
app/admin/services/: statistics_service.py
app/ai/: tasks.py
app/ai/models/: __init__.py  ai_chat_session.py  brand_guidelines.py
app/ai/routes/: brand_guidelines.py  sales_page_ai.py
app/ai/schemas/: ai_generation.py  brand_guidelines.py
app/ai/services/: anthropic_service.py  brand_guidelines_service.py  prompt_builder.py  sales_page_generator.py
app/auth/: dependencies.py
app/auth/models/: user.py  user_daily_activity.py
app/auth/routes/: admin.py  auth.py  password.py  settings.py
app/auth/schemas/: auth.py  settings.py  user.py
app/auth/services/: email_service.py  token_service.py
app/catalog/: dependencies.py
app/catalog/models/: __init__.py  sales_window.py
app/catalog/routes/: sales_windows.py
app/catalog/schemas/: __init__.py  sales_window.py
app/catalog/services/: __init__.py  (+1 more)
app/core/: celery_app.py  config.py  constants.py  datetime_utils.py  encryption.py  exceptions.py  log_config.py  rate_limit.py  redis.py  repository.py  schemas.py  security.py  storage.py
app/courses/: __init__.py  dependencies.py
app/db/: base.py  session.py
app/integrations/: __init__.py
app/notifications/: email_templates.py  tasks.py
app/scripts/: clear_test_data.py  import_courses.json  import_courses.py  list_placeholder_lessons.py  migrate_packages.py  mux_id_mapping.json.template  mux_id_mapping_example.json  seed_achievements.py  seed_demo_course.py  seed_integrations.py  seed_test_enrollments.py  test_mux_update.py  update_mux_ids.py  update_packages_catalog.py  verify_demo_course.py  verify_imported_courses.py
app/storage/: __init__.py  schemas.py  tasks.py
app/support/: tasks.py
docs/: api-endpoints.md  deployment-guide.md  environment-variables.md  mux-integration-guide.md  performance-testing-guide.md  sprint-6-plan.md  testing-guide.md
scripts/: seed_e2e.py
tests/: conftest.py
tests/courses/: conftest.py  test_certificates.py  test_delete_course.py  test_enrollment_flow.py  test_gamification.py  test_progress_tracking.py
tests/integrations/: conftest.py  test_admin_integrations_routes.py  test_integration_service.py  test_integrations_routes.py  test_proposals_routes.py
tests/storage/: conftest.py  test_admin_cleanup_routes.py  test_cleanup_service.py  test_storage_backend.py
tests/utils/: factories.py  helpers.py
(+108 files in other folders)
