[project]
name = "efektywniejsi-ekosystem-api"
version = "1.0.0"
description = "Authentication API for Efektywniejsi Ekosystem"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2]==1.7.4",
    "python-multipart==0.0.12",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "redis==5.0.1",
    "aiosmtplib==3.0.1",
    "jinja2==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "faker==33.1.0",
    "testcontainers==4.8.2",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "alembic/versions", "__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = ["--cov=app", "--cov-report=term-missing", "-v"]
